--- a/projectKursHtml/src/css/style.css
+++ b/projectKursHtml/src/css/style.css
@@ -1,31 +1,89 @@
-.header{
-    font-size: 20px;
-    line-height: 1.5;
-    margin: 60px auto;
+*{
+    box-sizing: border-box;
 }
 .section{
-    padding: 30px 0;
+    padding: 30px 10%;
 }
-.header span{
+body{
+    font-family: Tahoma, sans-serif;
+    line-height: 1.5;
+    color: #333;
+}
+.main-header{
+    text-align: center;
+    font-size: 24px;
+    margin-top: 80px;
+}
+.main-header span{
     display: block;
+    font-weight: 300;
 }
-.form-header, .section-header{
-    font-size: 20px;
+
+.main-header strong{
+    text-transform: uppercase;
     font-weight: 900;
 }
-.form{
-    border: 5px solid #428bca;
-    padding: 35px 20px;
+
+.main{
+    margin-top: 80px;
+    display: flex;
+    justify-content: space-around;
 }
+
+.video, .form{
+    display: inline-block;
+    vertical-align: top;
+}
+
+.form{
+    border: 5px solid blue;
+    padding: 20px;
+    text-align: center;
+}
+
+.form input{
+    display: block;
+    width: 300px;
+    padding: 17px;
+    font-size: 18px;
+    border: 1px solid #333;
+    margin-top: 10px;
+}
+
+.form p{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 900;
+    margin-bottom: 30px;
+}
+
 .form-btn{
-    margin-top: 20px;
+    font-size: 18px;
+    font-weight: 900;
+    color: white;
+    background-color: blue;
+    border: none;
+    width: 300px;
+    height: 60px;
+    display: block;
+    margin: 11px auto;
+}
+.header-section{
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 24px;
 }
 .feature{
-    margin-top: 60px;
+    display: flex;
+    justify-content: space-around;
+    margin: 80px auto;
 }
-.feature p{
-    margin-top: 20px;
+.col{
+    text-align: center;
+    border: 2px dotted gray;
+    padding: 20px;
 }
-.video{
-    margin-bottom: 30px;
+.col p{
+    margin-top: 10px;
 }
